--- a/02 - Comments, Variables, Types and IO/examples/e2.5-area-of-circle.html
+++ b/02 - Comments, Variables, Types and IO/examples/e2.5-area-of-circle.html
@@ -13,12 +13,17 @@
 */
 
 	// constants
+	const PI = 3.14;
 
 	// 1. collect input
+	let radius = prompt("Enter Radius");
 
 	// 2. perform calculations
+	let area = PI * (radius * radius);
 
 	// 3. display output
+	document.write("The area of a circle with radius"  radius + "is" + area + "'");
+
 
 </script>
 </body>
